# ado-gcp-poc

./: .gitignore  README.md  azure-pipelines.yml  package-lock.json  package.json
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/src/channels/batch_console/: batch_runner.py
backend/src/channels/prompt_management/: prompt_manager.py
backend/src/channels/render_queue/: queue_manager.py
backend/src/channels/studio_api/: main.py  router.py
backend/src/core/cloud_storage/: storage_client.py
backend/src/core/vector_sdk/: vector_client.py
backend/src/identity/api_gateway/: gateway.py
backend/src/identity/auth/: authenticator.py
backend/src/observability/logging/: logger.py
backend/src/observability/monitoring/: metrics.py
backend/src/observability/tracing/: tracer.py
backend/src/orchestration/ai_services/azure_ai/: azure_client.py
backend/src/orchestration/ai_services/gemini/: gemini_client.py
backend/src/orchestration/ai_services/stable_diffusion/: sd_client.py
backend/src/orchestration/processors/fast_process/: task.py
backend/src/orchestration/processors/image_generation/: task.py
backend/src/orchestration/processors/publishing/: task.py
backend/src/orchestration/processors/text_post_processor/: task.py
backend/src/orchestration/rail_bus/: publisher.py  tasks.py
backend/src/storage/cloud_sql/: database.py
backend/src/storage/secret_manager/: secrets.py
backend/tests/unit/: test_prompt_manager.py  test_render_queue.py
config/: development.yaml  production.yaml  staging.yaml
frontend/: .dockerignore  Dockerfile  (+4 more)
(+46 files in other folders)
