[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "photo-real-ai-backend"
version = "0.1.0"
description = "Photo-Real AI — FastAPI + Celery backend"
requires-python = ">=3.11"

[project.scripts]
serve  = "src.channels.studio_api.main:start"
worker = "src.orchestration.rail_bus.tasks:start"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
log_cli = true
log_level = "DEBUG"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
